Enable native access in Debian run script